--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r --no-cache-dir -r test/requirements.txt
+          pip install --no-cache-dir -r test/requirements.txt
 
       - name: Run tests
         run: pytest -p no:cacheprovider test/test_unit.py --verbose --capture=no
