--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches:
       - main
+  create_tag:
+    types:
+      - created
 
 jobs:
   test:
@@ -52,3 +55,28 @@ jobs:
           context: .
           push: true
           tags: sykescottages/new-relic-deployment-marker-v2:latest
+
+  tag-docker-image:
+    runs-on: ubuntu-latest
+    if: github.event.ref_type == 'tag'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Pull latest Docker image
+        run: docker pull sykescottages/new-relic-deployment-marker-v2:latest
+
+      - name: Tag Docker image
+        run: docker tag sykescottages/new-relic-deployment-marker-v2:latest sykescottages/new-relic-deployment-marker-v2:${{ github.ref_name }}
+
+      - name: Push tagged Docker image
+        run: docker push sykescottages/new-relic-deployment-marker-v2:${{ github.ref_name }}
