--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,11 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*'
   pull_request:
     branches:
       - main
-  create_tag:
-    types:
-      - created
 
 jobs:
   test:
@@ -58,7 +57,7 @@ jobs:
 
   tag-docker-image:
     runs-on: ubuntu-latest
-    if: github.event.ref_type == 'tag'
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
