--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -33,6 +33,7 @@ jobs:
 
   build-and-push-docker:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     needs: test
 
     steps:
